# phantom-shield

./: .cspell.json  .env.example  .gitignore  .markdownlint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: docker-build.yml  label-sync.yml  link-check.yml  markdown-lint.yml  python-ci.yml  release.yml  security-scan.yml  spellcheck.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/adr/: 001-agpl-license.md  002-mistral-ai-models.md  003-ollama-local-inference.md  004-six-layer-architecture.md  005-hmac-request-signing.md
docs/api/: README.md  openapi-spec.md
docs/architecture/: 6-layer-defense.md  README.md  guardian-shield.md  port-schema.md
docs/benchmarks/: methodology.md
docs/compliance/: README.md  eu-ai-act.md  gdpr-matrix.md  iso-27001.md
docs/deployment/: kubernetes-guide.md  migration-from-openai.md  scaling-guide.md
docs/licensing/: dual-license-faq.md
docs/security/: README.md  penetration-testing.md  stride-threat-model.md
docs/white-paper/: NSS-v3.1.1-Enterprise-White-Paper.md
k8s/: configmap.yml  deployment.yml  namespace.yml  service.yml
src/nss/: __init__.py  audit.py  auth.py  cache.py  config.py  metrics.py  metrics_server.py  middleware.py  models.py
tests/: conftest.py  test_audit.py  test_auth.py  test_cache.py  test_metrics.py  test_metrics_server.py  test_middleware.py
(+60 files in other folders)
